--- a/lab2react/src/Task.css
+++ b/lab2react/src/Task.css
@@ -1,3 +1,11 @@
+body {
+    line-height: 1.5;
+}
+
+.comptrueshowfalse{
+    display: none;
+}
+
 .edit {
     background-color: aquamarine;
 }
@@ -5,3 +13,4 @@
 input[type="checkbox"]:checked + label{
     text-decoration: line-through;
 }
+
